--- a/index.html
+++ b/index.html
@@ -5177,7 +5177,7 @@ Tropical &amp; Deep Vibes">
                                 </div>
                                 <div class="profileHeaderInfo__content sc-media-content">
                                     <h3 class="profileHeaderInfo__userName g-type-shrinkwrap-block g-type-shrinkwrap-large-primary">
-    Resume For Backend Engineer @ SoundCloud NYC
+    Resume For Android Engineer @ SoundCloud NYC
   </h3>
                                     <br>
                                     <h4 class="profileHeaderInfo__additional g-type-shrinkwrap-block g-type-shrinkwrap-large-secondary">Konstantino Sparakis</h4>
