--- a/index.html
+++ b/index.html
@@ -5168,7 +5168,7 @@ Tropical &amp; Deep Vibes">
                         <div class="profileHeader__info">
                             <div class="profileHeaderInfo sc-media">
                                 <div class="profileHeaderInfo__avatar sc-media-image">
-                                    <div class="image m-user image__noOutline customImage interactive sc-artwork sc-artwork-placeholder-11 image__rounded m-loaded" tabindex="0" style="height: 200px; width: 200px;"><span style="background-image: url(&quot;https://media.licdn.com/media/AAEAAQAAAAAAAAgGAAAAJDE5M2RmN2NlLWZkYjYtNGM0NS1hZTkyLWY0YzNiZDQzZGFlOA.jpg&quot;); width: 200px; height: 200px; opacity: 1;" class="sc-artwork sc-artwork-placeholder-11 image__rounded image__full g-opacity-transition" aria-label="Koko’s avatar" aria-role="img"></span>
+                                    <div class="image m-user image__noOutline customImage interactive sc-artwork sc-artwork-placeholder-11 image__rounded m-loaded" tabindex="0" style="height: 200px; width: 200px;"><span style="background-image: url(&quot;https://i1.sndcdn.com/avatars-000303395079-k5ny1f-t500x500.jpg&quot;); width: 200px; height: 200px; opacity: 1;" class="sc-artwork sc-artwork-placeholder-11 image__rounded image__full g-opacity-transition" aria-label="Koko’s avatar" aria-role="img"></span>
 
                                         <div class="image__button">
 
