--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Tropical &amp; Deep Vibes. Boston. 1 Tracks. 69 Followers. Stream Tracks and Pla
         <meta property="twitter:app:url:iphone" content="soundcloud://users:4746959">
         <meta property="twitter:app:url:ipad" content="soundcloud://users:4746959">
         <meta property="twitter:title" content="Koko">
-        <meta property="twitter:image" content="https://i1.sndcdn.com/avatars-000281758909-dbo74j-t500x500.jpg">
+        <meta property="twitter:image" content="https://i1.sndcdn.com/avatars-000303395079-k5ny1f-t500x500.jpg">
         <meta property="twitter:description" content="Engineer, Producer and DJ.
 Tropical &amp; Deep Vibes">
         <meta property="twitter:card" content="summary">
@@ -5168,7 +5168,7 @@ Tropical &amp; Deep Vibes">
                         <div class="profileHeader__info">
                             <div class="profileHeaderInfo sc-media">
                                 <div class="profileHeaderInfo__avatar sc-media-image">
-                                    <div class="image m-user image__noOutline customImage interactive sc-artwork sc-artwork-placeholder-11 image__rounded m-loaded" tabindex="0" style="height: 200px; width: 200px;"><span style="background-image: url(&quot;https://i1.sndcdn.com/avatars-000303395079-k5ny1f-t500x500.jpg&quot;); width: 200px; height: 200px; opacity: 1;" class="sc-artwork sc-artwork-placeholder-11 image__rounded image__full g-opacity-transition" aria-label="Koko’s avatar" aria-role="img"></span>
+                                    <div class="image m-user image__noOutline customImage interactive sc-artwork sc-artwork-placeholder-11 image__rounded m-loaded" tabindex="0" style="height: 200px; width: 200px;"><span style="background-image: url('koko/avi.jpg'); width: 200px; height: 200px; opacity: 1;" class="sc-artwork sc-artwork-placeholder-11 image__rounded image__full g-opacity-transition" aria-label="Koko’s avatar" aria-role="img"></span>
 
                                         <div class="image__button">
 
