--- a/index.html
+++ b/index.html
@@ -5844,7 +5844,7 @@ Tropical &amp; Deep Vibes">
                                                                 <div class="commentForm commentForm__transition m-small">
                                                                     <div class="commentForm__wrapper commentForm__transition">
                                                                         <div class="commentForm__avatar">
-                                                                            <span style="background-image:url(https://i1.sndcdn.com/avatars-000281758909-dbo74j-t50x50.jpg);width:20px;height:20px;" class="sc-artwork sc-artwork-placeholder-11  " aria-label="Koko’s avatar" aria-role="img"></span>
+                                                                            <span style="background-image:url(koko/avi.jpg);width:20px;height:20px;" class="sc-artwork sc-artwork-placeholder-11  " aria-label="Koko’s avatar" aria-role="img"></span>
                                                                         </div>
                                                                         <div class="commentForm__inputWrapper sc-border-box">
                                                                             <a class="commentForm__recipient" href="https://soundcloud.com/cloud_koko#"></a>
