--- a/index.html
+++ b/index.html
@@ -5168,7 +5168,7 @@ Tropical &amp; Deep Vibes">
                         <div class="profileHeader__info">
                             <div class="profileHeaderInfo sc-media">
                                 <div class="profileHeaderInfo__avatar sc-media-image">
-                                    <div class="image m-user image__noOutline customImage interactive sc-artwork sc-artwork-placeholder-11 image__rounded m-loaded" tabindex="0" style="height: 200px; width: 200px;"><span style="background-image: url('koko/avi.jpg'); width: 200px; height: 200px; opacity: 1;" class="sc-artwork sc-artwork-placeholder-11 image__rounded image__full g-opacity-transition" aria-label="Koko’s avatar" aria-role="img"></span>
+                                    <div class="image m-user image__noOutline customImage interactive sc-artwork sc-artwork-placeholder-11 image__rounded m-loaded" tabindex="0" style="height: 200px; width: 200px;"><span style="background-image: url('https://i1.sndcdn.com/avatars-000303395079-k5ny1f-t500x500.jpg'); width: 200px; height: 200px; opacity: 1;" class="sc-artwork sc-artwork-placeholder-11 image__rounded image__full g-opacity-transition" aria-label="Koko’s avatar" aria-role="img"></span>
 
                                         <div class="image__button">
 
@@ -5839,21 +5839,6 @@ Tropical &amp; Deep Vibes">
                                                                     </br>
                                                                     ♣ Discovered API keys including Amazon Web Service keys along with other vulnerabilities.
 
-                                                                </div>
-
-                                                                <div class="commentForm commentForm__transition m-small">
-                                                                    <div class="commentForm__wrapper commentForm__transition">
-                                                                        <div class="commentForm__avatar">
-                                                                            <span style="background-image:url(koko/avi.jpg);width:20px;height:20px;" class="sc-artwork sc-artwork-placeholder-11  " aria-label="Koko’s avatar" aria-role="img"></span>
-                                                                        </div>
-                                                                        <div class="commentForm__inputWrapper sc-border-box">
-                                                                            <a class="commentForm__recipient" href="https://soundcloud.com/cloud_koko#"></a>
-                                                                            <input type="text" title="Write a comment" placeholder="Write a comment" value="" class="commentForm__input sc-border-box">
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="commentForm__inputMessage g-input-validation g-input-validation-hidden">
-                                                                        Comment must not exceed 1000 characters
-                                                                    </div>
                                                                 </div>
 
 
