--- a/index.html
+++ b/index.html
@@ -5356,7 +5356,7 @@ Tropical &amp; Deep Vibes">
                                                         <div class="sound__body">
                                                             <div class="sound__artwork">
                                                                 <a class="sound__coverArt" href="https://soundcloud.com/brooklynfire/tommie-sunshine-rowen-reecks-feat-private-practice-feel-it">
-                                                                    <div class="image m-sound image__lightOutline readOnly customImage sc-artwork sc-artwork-placeholder-4 m-loaded" style="height: 100%; width: 100%;"><span style="width: 100%; height: 100%; opacity: 1; background-image: url(&quot;./Koko/BU.png&quot;);" class="sc-artwork sc-artwork-placeholder-4  image__full g-opacity-transition" aria-label="Tommie Sunshine &amp; Rowen Reecks feat. Private Practice - Feel It" aria-role="img"></span>
+                                                                    <div class="image m-sound image__lightOutline readOnly customImage sc-artwork sc-artwork-placeholder-4 m-loaded" style="height: 100%; width: 100%;"><span style="width: 100%; height: 100%; opacity: 1; background-image: url(&quot;https://github.com/ksparakis/soundcloud/raw/master/Koko/Bu.png&quot;);" class="sc-artwork sc-artwork-placeholder-4  image__full g-opacity-transition" aria-label="Tommie Sunshine &amp; Rowen Reecks feat. Private Practice - Feel It" aria-role="img"></span>
 
                                                                     </div>
                                                                 </a>
@@ -5477,7 +5477,7 @@ Tropical &amp; Deep Vibes">
                                                         <div class="sound__body">
                                                             <div class="sound__artwork">
                                                                 <a class="sound__coverArt" href="https://lexumo.com">
-                                                                    <div class="image m-sound image__lightOutline readOnly customImage sc-artwork sc-artwork-placeholder-3" style="height: 100%; width: 100%;"><span style="background-image:url(./koko/lexumo.jpg);width:100%;height:100%;" class="sc-artwork sc-artwork-placeholder-11  " aria-label="Koko’s avatar" aria-role="img" aria-hidden="true"></span>
+                                                                    <div class="image m-sound image__lightOutline readOnly customImage sc-artwork sc-artwork-placeholder-3" style="height: 100%; width: 100%;"><span style="background-image:url('https://github.com/ksparakis/soundcloud/raw/master/Koko/lexumo.jpg');width:100%;height:100%;" class="sc-artwork sc-artwork-placeholder-11  " aria-label="Koko’s avatar" aria-role="img" aria-hidden="true"></span>
 
 
                                                                     </div>
