page title change

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <link rel="dns-prefetch" href="https://va.sndcdn.com/">
         <link rel="dns-prefetch" href="https://pixel.quantserve.com/">
 
-        <title>Koko | Free Listening on SoundCloud</title>
+        <title>Resume</title>
 
         <meta content="record, sounds, share, sound, audio, tracks, music, soundcloud" name="keywords">
         <meta name="referrer" content="origin">
@@ -6158,14 +6158,6 @@ Tropical &amp; Deep Vibes">
 
 
 
-
-                            <div class="l-footer sc-text-verylight sc-border-light-top"><a class="sc-link-verylight" href="https://soundcloud.com/terms-of-use" title="Terms of use">Legal</a>&nbsp;⁃
-                                <a class="sc-link-verylight" href="https://soundcloud.com/pages/privacy" title="Privacy policy">Privacy</a>&nbsp;⁃
-                                <a class="sc-link-verylight" href="https://soundcloud.com/pages/cookies" title="Cookies policy">Cookies</a>&nbsp;⁃
-                                <a class="sc-link-verylight" href="https://soundcloud.com/imprint" title="Company information">Imprint</a>&nbsp;⁃
-                                <a class="sc-link-verylight" href="https://soundcloud.com/popular/searches" title="Popular searches">Popular searches</a>
-                                <br><a class="localeSelector sc-pointer" tabindex="0" aria-haspopup="true" role="button" aria-owns="dropdown-button-129">Language: <span class="sc-text">English (US)</span></a>
-                            </div>
                         </div>
                     </div>
                 </div>
