--- a/index.html
+++ b/index.html
@@ -6052,7 +6052,7 @@ Tropical &amp; Deep Vibes">
                                                 <div>
                                                     <p>Hey Soundcloud,
                                                         <br>
-                                                        <br> My name is Konstantino Sparakis, I have been an avid user and soundcloud enthusiest for years and now I am interested in joining soundcloud as a mobile developer. They say getting in the door is the hardest part, so I took sometime, borrowed some code (Don't get mad) and made this resume to catch your guys attentions! I applied online and I hope to hear back!
+                                                        <br> My name is Konstantinos Sparakis, I have been an avid user and SoundCloud enthusiast for years and now I am interested in joining SoundCloud as a mobile developer. They say getting in the door is the hardest part, so I took some time, borrowed some code (Don't get mad) and made this resume to catch your guys attentions! I applied online and I hope to hear back!
                                                         <br>
                                                         <br> Email: Ksparakis@gmail.com</p>
                                                 </div>
