--- a/index.html
+++ b/index.html
@@ -5381,7 +5381,7 @@ Tropical &amp; Deep Vibes">
                                                                                     </div>
                                                                                 </div>
                                                                                 <a class="soundTitle__title sc-link-dark" href="http://www.bu.edu">
-                                                                                    <span class=""><h2>B.S. Computer Engineering Minor Buisness Administration</h2></span>
+                                                                                    <span class=""><h2>B.S. Computer Engineering Minor Business Administration</h2></span>
                                                                                 </a>
                                                                             </div>
                                                                             <div class="soundTitle__additionalContainer">
