--- a/index.html
+++ b/index.html
@@ -5140,7 +5140,7 @@
                                     <br>
                                     <h4 class="profileHeaderInfo__additional g-type-shrinkwrap-block g-type-shrinkwrap-large-secondary">Boston, MA</h4>
                                     <br>
-                                    <h4 class="profileHeaderInfo__additional g-type-shrinkwrap-block g-type-shrinkwrap-large-secondary">Available: June-Sept 2017</h4>
+                                    <h4 class="profileHeaderInfo__additional g-type-shrinkwrap-block g-type-shrinkwrap-large-secondary">Available: June 2017</h4>
                                 </div>
                             </div>
                         </div>
