--- a/index.html
+++ b/index.html
@@ -5043,6 +5043,12 @@
     <meta name="twitter:description" content="Decided to get creative so I did some scraping and editing, to hack together this resume for a position as an Engineer at Soundcloud!">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/ksparakis/soundcloud/master/Koko/twitter-img.png">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta property="og:url" content="https://ksparakis.github.io/soundcloud" />
+    <meta property="og:title" content="Konstantino Sparakis's Soundcloud Resume" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/ksparakis/soundcloud/master/Koko/twitter-img.png" />
+    <meta property="og:image:width" content="700" />
+    <meta property="og:image:height" content="500" />
+    <meta property="og:description" content="Decided to get creative so I did some scraping and editing, to hack together this resume for a position as an Engineer at Soundcloud!" />
 </head>
 
 <body data-gr-c-s-loaded="true">
