--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en" class="gr__soundcloud_com">
 
 <head>
+    <meta name="description" content="Decided to get creative so I did some scraping and editing, to hack together this resume for a position as an Engineer at Soundcloud!" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@sparakis">
     <meta name="twitter:creator" content="@KonstantinoSparakis">
@@ -17,6 +18,10 @@
     <meta property="og:image:width" content="700" />
     <meta property="og:image:height" content="500" />
     <meta property="og:description" content="Decided to get creative so I did some scraping and editing, to hack together this resume for a position as an Engineer at Soundcloud!" />
+    <meta itemscope itemtype="http://schema.org/Article" />
+    <meta itemprop="headline" content="Konstantino's Soundcloud Resume" />
+    <meta itemprop="description" content="Decided to get creative so I did some scraping and editing, to hack together this resume for a position as an Engineer at Soundcloud!" />
+    <meta itemprop="image" content="https://raw.githubusercontent.com/ksparakis/soundcloud/master/Koko/twitter-img.png" />
 
 
 
@@ -25,7 +30,7 @@
 
 
 
-    <title>Resume</title>
+    <title>Konstantino Sparakis's Resume</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no">
 
     <!--[if IE]><meta content="true" name="MSSmartTagsPreventParsing">
