--- a/index.html
+++ b/index.html
@@ -5118,7 +5118,7 @@
                                 </div>
                                 <div class="profileHeaderInfo__content sc-media-content">
                                     <h3 class="profileHeaderInfo__userName g-type-shrinkwrap-block g-type-shrinkwrap-large-primary">
-    Resume For Android Engineer @ SoundCloud NYC
+    Resume For Engineering @ SoundCloud NYC
   </h3>
                                     <br>
                                     <h4 class="profileHeaderInfo__additional g-type-shrinkwrap-block g-type-shrinkwrap-large-secondary">Konstantino Sparakis</h4>
@@ -5805,7 +5805,7 @@
                                                 <div>
                                                     <p>Hey Soundcloud,
                                                         <br>
-                                                        <br> My name is Konstantinos Sparakis, I have been an avid user and SoundCloud enthusiast for years and now I am interested in joining SoundCloud as a mobile developer. They say getting in the door is the hardest part, so I took some time, borrowed some code (Don't get mad) and made this resume to catch your guys attentions! I applied online and I hope to hear back!
+                                                        <br> My name is Konstantinos Sparakis, I have been an avid user and SoundCloud enthusiast for years and now I am interested in joining SoundCloud as a software dev. They say getting in the door is the hardest part, so I took some time, borrowed some code (Don't get mad) and made this resume to catch your guys attentions! I applied online and I hope to hear back!
                                                         <br>
                                                         <br> Email: Ksparakis@gmail.com</p>
                                                 </div>
