--- a/index.html
+++ b/index.html
@@ -5988,6 +5988,11 @@
 
     ga('create', 'UA-96066270-1', 'auto');
     ga('send', 'pageview');
+    ga('set', 'userId', {
+        {
+            USER_ID
+        }
+    }); // Set the user ID using signed-in user_id.
 </script>
 
 </html>
